Modify GOOGLE_API_KEY in .env.example
Updated GOOGLE_API_KEY placeholder in .env.example

--- a/.env.example
+++ b/.env.example
@@ -23,7 +23,7 @@ CELERY_BROKER_URL=redis://redis:6379/1
 #DEFAULT_OPENAI_MODEL=gpt-4o
 #ANTHROPIC_API_KEY=sk-ant-...
 #DEFAULT_ANTHROPIC_MODEL=claude-3-5-sonnet-20241022
-GOOGLE_API_KEY=AIzaSyD6Pi_fqZmpB4YB9guLHUgQ2Smhk8nkC44
+GOOGLE_API_KEY=AI...
 DEFAULT_GEMINI_MODEL=gemini-3-flash-preview
 
 # LLM - Local Providers
